--- a/project/package.json
+++ b/project/package.json
@@ -42,6 +42,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -55,6 +56,7 @@
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
+    "pg": "^8.16.3",
     "postcss": "8.4.30",
     "qrcode": "^1.5.3",
     "react": "18.2.0",
@@ -72,8 +74,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/pg": "^8.15.5",
     "@types/qrcode": "^1.5.5"
   }
 }
