--- a/project/package.json
+++ b/project/package.json
@@ -55,6 +55,7 @@
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
     "postcss": "8.4.30",
     "qrcode": "^1.5.3",
     "react": "18.2.0",
