--- a/project/package.json
+++ b/project/package.json
@@ -39,14 +39,18 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@types/node": "20.6.2",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/redis": "^4.0.10",
     "autoprefixer": "10.4.15",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
@@ -56,6 +60,7 @@
     "next": "13.5.1",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.5",
     "postcss": "8.4.30",
     "qrcode": "^1.5.3",
     "react": "18.2.0",
@@ -64,6 +69,7 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
+    "redis": "^5.8.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
