feat: enhance health dashboard with metrics display and simplified email system
- Fixed Health Suggestions button positioning with absolute layout
- Enhanced Recent Health Metrics card with icons and better formatting
- Simplified email reminder system to consistent 3-email schedule for all appointments
- Fixed appointment time slot formatting to show date, hours, minutes only
- Removed testing/development UI components and functions
- Updated SQL init with single 'juled' user and comprehensive health data
- Added user_medical_profile table for medical history storage

--- a/project/package.json
+++ b/project/package.json
@@ -90,6 +90,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/qrcode": "^1.5.5"
+    "@types/qrcode": "^1.5.5",
+    "ts-node": "^10.9.2"
   }
 }
